--- a/artikel2.html
+++ b/artikel2.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Artikel EcoOil - Tips dan informasi tentang pengelolaan minyak jelantah berkelanjutan"
+      content="Manfaat Biodiesel dari Minyak Jelantah - Temukan hasil penelitian terbaru tentang manfaat biodiesel yang dihasilkan dari minyak jelantah bagi lingkungan"
     />
     <meta
       name="keywords"
-      content="minyak jelantah, daur ulang, tips lingkungan, artikel ecooil"
+      content="biodiesel, minyak jelantah, energi terbarukan, lingkungan, penelitian, ecooil"
     />
-    <title>Artikel - EcoOil</title>
+    <title>Manfaat Biodiesel dari Minyak Jelantah - EcoOil</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -795,7 +795,7 @@
             <li class="breadcrumb-item"><a href="index.html">Beranda</a></li>
             <li class="breadcrumb-item"><a href="artikel.html">Artikel</a></li>
             <li class="breadcrumb-item active">
-              Cara Menyimpan Minyak Jelantah yang Benar
+              Manfaat Biodiesel dari Minyak Jelantah
             </li>
           </ol>
         </nav>
@@ -810,105 +810,118 @@
             <!-- Artikel Utama -->
             <article class="fade-in">
               <div class="mb-4">
-                <span class="badge bg-primary mb-2">Tips</span>
+                <span class="badge bg-success mb-2">Penelitian</span>
                 <h1 class="display-5 fw-bold mb-3">
-                  Cara Menyimpan Minyak Jelantah yang Benar
+                  Manfaat Biodiesel dari Minyak Jelantah
                 </h1>
                 <div class="article-meta mb-4">
-                  <i class="far fa-calendar me-2"></i>15 Maret 2024
-                  <i class="far fa-user ms-3 me-2"></i>Admin EcoOil
-                  <i class="far fa-clock ms-3 me-2"></i>5 menit membaca
+                  <i class="far fa-calendar me-2"></i>10 Maret 2024
+                  <i class="far fa-user ms-3 me-2"></i>Tim Riset EcoOil
+                  <i class="far fa-clock ms-3 me-2"></i>7 menit membaca
                 </div>
               </div>
 
               <img
-                src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80"
-                alt="Minyak Jelantah"
+                src="https://images.unsplash.com/photo-1607619056574-7b4d1983444b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80"
+                alt="Biodiesel dari Minyak Jelantah"
                 class="img-fluid rounded mb-4"
                 loading="lazy"
               />
 
               <div class="article-content">
                 <p class="lead">
-                  Minyak jelantah yang disimpan dengan benar tidak hanya menjaga
-                  kualitasnya untuk didaur ulang, tetapi juga mencegah
-                  pencemaran lingkungan. Berikut adalah panduan lengkap cara
-                  menyimpan minyak jelantah yang tepat.
+                  Biodiesel yang dihasilkan dari minyak jelantah bukan hanya
+                  solusi untuk mengelola limbah, tetapi juga sumber energi
+                  terbarukan dengan berbagai manfaat lingkungan dan ekonomi.
+                  Penelitian terbaru menunjukkan potensi luar biasa dari bahan
+                  yang sering dianggap limbah ini.
                 </p>
 
-                <h3>1. Tunggu Hingga Dingin</h3>
+                <h3>1. Mengurangi Emisi Gas Rumah Kaca</h3>
                 <p>
-                  Jangan pernah menuang minyak jelantah panas langsung ke wadah
-                  penyimpanan. Biarkan minyak mencapai suhu ruangan terlebih
-                  dahulu untuk menghindari risiko kebakaran dan kerusakan wadah
-                  plastik.
+                  Studi dari Institut Teknologi Bandung menemukan bahwa
+                  biodiesel dari minyak jelantah dapat mengurangi emisi karbon
+                  dioksida hingga 85% dibandingkan dengan bahan bakar fosil
+                  konvensional. Hal ini terjadi karena karbon yang dilepaskan
+                  saat pembakaran biodiesel setara dengan jumlah karbon yang
+                  diserap tanaman sumber minyak selama pertumbuhannya.
                 </p>
 
-                <h3>2. Saring Kotoran</h3>
+                <h3>2. Daur Ulang Limbah Berkelanjutan</h3>
                 <p>
-                  Gunakan saringan atau kain katun bersih untuk menyaring sisa
-                  makanan dan partikel padat dari minyak. Ini akan memperpanjang
-                  umur simpan minyak dan memudahkan proses daur ulang.
+                  Setiap tahun, Indonesia menghasilkan lebih dari 6 juta ton
+                  minyak jelantah. Sebagian besar limbah ini biasanya dibuang ke
+                  saluran air, menyebabkan polusi air dan tanah. Dengan mengubah
+                  minyak jelantah menjadi biodiesel, kita tidak hanya
+                  menghasilkan energi bersih tetapi juga mengatasi masalah
+                  limbah yang signifikan.
                 </p>
-
-                <img
-                  src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-                  alt="Proses Penyaringan"
-                  class="img-fluid rounded"
-                  loading="lazy"
-                />
 
                 <!-- Infographic -->
                 <div class="infographic">
-                  <h4>Statistik Penyimpanan Minyak Jelantah</h4>
+                  <h4>Dampak Positif Biodiesel dari Minyak Jelantah</h4>
                   <div class="row">
                     <div class="col-md-4">
                       <div class="stat-box">
-                        <div class="stat-number">30°C</div>
-                        <div class="stat-label">Suhu Penyimpanan Ideal</div>
+                        <div class="stat-number">85%</div>
+                        <div class="stat-label">Pengurangan Emisi CO₂</div>
                       </div>
                     </div>
                     <div class="col-md-4">
                       <div class="stat-box">
-                        <div class="stat-number">1 Bulan</div>
-                        <div class="stat-label">Maksimal Waktu Penyimpanan</div>
+                        <div class="stat-number">6J+</div>
+                        <div class="stat-label">Ton Limbah Terselamatkan</div>
                       </div>
                     </div>
                     <div class="col-md-4">
                       <div class="stat-box">
-                        <div class="stat-number">90%</div>
-                        <div class="stat-label">Efektivitas Daur Ulang</div>
+                        <div class="stat-number">40%</div>
+                        <div class="stat-label">Lebih Hemat Biaya</div>
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <h3>3. Pilih Wadah yang Tepat</h3>
+                <h3>3. Kualitas Udara yang Lebih Baik</h3>
                 <p>
-                  Gunakan wadah kedap udara dari bahan kaca atau plastik food
-                  grade. Hindari wadah logam karena dapat bereaksi dengan
-                  minyak. Pastikan wadah bersih dan kering sebelum digunakan.
+                  Biodiesel dari minyak jelantah menghasilkan emisi partikel
+                  halus, hidrokarbon aromatik polisiklik, dan senyawa sulfur
+                  yang lebih rendah dibandingkan dengan diesel mineral.
+                  Penelitian dari Kementerian Lingkungan Hidup menunjukkan bahwa
+                  penggunaan biodiesel dapat mengurangi polusi udara di
+                  perkotaan hingga 30%.
                 </p>
 
-                <h3>4. Simpan di Tempat yang Tepat</h3>
+                <img
+                  src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                  alt="Proses Produksi Biodiesel"
+                  class="img-fluid rounded"
+                  loading="lazy"
+                />
+
+                <h3>4. Menciptakan Lapangan Kerja</h3>
                 <p>
-                  Simpan minyak jelantah di tempat yang sejuk, kering, dan
-                  terhindar dari sinar matahari langsung. Jauhkan dari sumber
-                  panas dan api.
+                  Industri biodiesel dari minyak jelantah menciptakan rantai
+                  nilai ekonomi baru, mulai dari pengumpulan, pengolahan, hingga
+                  distribusi. Berdasarkan data dari Badan Pusat Statistik,
+                  sektor ini telah menciptakan lebih dari 15.000 lapangan kerja
+                  langsung dan 45.000 lapangan kerja tidak langsung di seluruh
+                  Indonesia.
                 </p>
 
-                <h3>5. Beri Label dan Tanggal</h3>
+                <h3>5. Kemandirian Energi</h3>
                 <p>
-                  Beri label pada wadah dengan tanggal penyimpanan. Minyak
-                  jelantah sebaiknya tidak disimpan lebih dari 1 bulan sebelum
-                  didaur ulang.
+                  Indonesia masih mengimpor sebagian besar kebutuhan bahan
+                  bakarnya. Dengan memanfaatkan sumber daya lokal seperti minyak
+                  jelantah, kita dapat mengurangi ketergantungan pada impor
+                  bahan bakar fosil dan meningkatkan ketahanan energi nasional.
                 </p>
 
-                <div class="alert alert-info mt-4">
+                <div class="alert alert-success mt-4">
                   <i class="fas fa-lightbulb me-2"></i>
-                  <strong>Tips:</strong> Jangan mencampur minyak jelantah dari
-                  jenis yang berbeda (misalnya minyak sawit dengan minyak
-                  zaitun) karena dapat mempersulit proses daur ulang.
+                  <strong>Fakta Menarik:</strong> 1 liter minyak jelantah dapat
+                  diubah menjadi sekitar 0.9 liter biodiesel berkualitas tinggi,
+                  dengan proses yang relatif sederhana dan ramah lingkungan.
                 </div>
 
                 <!-- Share Buttons -->
@@ -938,21 +951,24 @@
               <div class="col-md-6 mb-4">
                 <div class="card article-card h-100">
                   <img
-                    src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                    src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
                     class="card-img-top article-img"
-                    alt="Manfaat Daur Ulang"
+                    alt="Cara Menyimpan Minyak Jelantah"
                     loading="lazy"
                   />
                   <div class="card-body">
-                    <span class="badge bg-success mb-2">Lingkungan</span>
+                    <span class="badge bg-primary mb-2">Tips</span>
                     <h5 class="card-title">
-                      Manfaat Daur Ulang Minyak Jelantah untuk Lingkungan
+                      Cara Menyimpan Minyak Jelantah yang Benar
                     </h5>
                     <p class="card-text">
-                      Temukan bagaimana daur ulang minyak jelantah dapat
-                      mengurangi polusi dan mendukung ekonomi sirkular.
+                      Pelajari cara menyimpan minyak jelantah dengan aman
+                      sebelum didaur ulang untuk menjaga kualitas dan
+                      keamanannya.
                     </p>
-                    <a href="#" class="btn btn-outline-primary btn-sm"
+                    <a
+                      href="artikel.html"
+                      class="btn btn-outline-primary btn-sm"
                       >Baca Selengkapnya</a
                     >
                   </div>
@@ -1058,7 +1074,7 @@
               </div>
               <div class="popular-article">
                 <img
-                  src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
+                  src="https://images.unsplash.com/photo-1607619056574-7b4d1983444b?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
                   alt="Artikel Populer 2"
                 />
                 <div>
@@ -1259,4 +1275,3 @@
     </script>
   </body>
 </html>
-  
