--- a/artikel3.html
+++ b/artikel3.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Artikel EcoOil - Tips dan informasi tentang pengelolaan minyak jelantah berkelanjutan"
+      content="EcoOil Raih Penghargaan Lingkungan - Kabar gembira tentang pencapaian EcoOil dalam mendapatkan penghargaan nasional atas kontribusi pelestarian lingkungan."
     />
     <meta
       name="keywords"
-      content="minyak jelantah, daur ulang, tips lingkungan, artikel ecooil"
+      content="EcoOil, penghargaan lingkungan, prestasi, berita, pelestarian lingkungan, daur ulang"
     />
-    <title>Artikel - EcoOil</title>
+    <title>EcoOil Raih Penghargaan Lingkungan - EcoOil</title>
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -795,7 +795,7 @@
             <li class="breadcrumb-item"><a href="index.html">Beranda</a></li>
             <li class="breadcrumb-item"><a href="artikel.html">Artikel</a></li>
             <li class="breadcrumb-item active">
-              Cara Menyimpan Minyak Jelantah yang Benar
+              EcoOil Raih Penghargaan Lingkungan
             </li>
           </ol>
         </nav>
@@ -810,105 +810,120 @@
             <!-- Artikel Utama -->
             <article class="fade-in">
               <div class="mb-4">
-                <span class="badge bg-primary mb-2">Tips</span>
+                <span class="badge bg-info mb-2 text-dark">Berita</span>
                 <h1 class="display-5 fw-bold mb-3">
-                  Cara Menyimpan Minyak Jelantah yang Benar
+                  EcoOil Raih Penghargaan Lingkungan Nasional
                 </h1>
                 <div class="article-meta mb-4">
-                  <i class="far fa-calendar me-2"></i>15 Maret 2024
-                  <i class="far fa-user ms-3 me-2"></i>Admin EcoOil
-                  <i class="far fa-clock ms-3 me-2"></i>5 menit membaca
+                  <i class="far fa-calendar me-2"></i>20 Maret 2024
+                  <i class="far fa-user ms-3 me-2"></i>Tim Komunikasi EcoOil
+                  <i class="far fa-clock ms-3 me-2"></i>4 menit membaca
                 </div>
               </div>
 
               <img
-                src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80"
-                alt="Minyak Jelantah"
+                src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80"
+                alt="Penghargaan Lingkungan"
                 class="img-fluid rounded mb-4"
                 loading="lazy"
               />
 
               <div class="article-content">
                 <p class="lead">
-                  Minyak jelantah yang disimpan dengan benar tidak hanya menjaga
-                  kualitasnya untuk didaur ulang, tetapi juga mencegah
-                  pencemaran lingkungan. Berikut adalah panduan lengkap cara
-                  menyimpan minyak jelantah yang tepat.
+                  Kami bangga mengumumkan bahwa EcoOil telah menerima
+                  penghargaan bergengsi "Pioneer in Environmental
+                  Sustainability" dari Kementerian Lingkungan Hidup dan
+                  Kehutanan. Penghargaan ini merupakan apresiasi atas dedikasi
+                  kami dalam mengelola limbah minyak jelantah menjadi sumber
+                  energi terbarukan yang berdampak positif bagi lingkungan dan
+                  masyarakat.
                 </p>
 
-                <h3>1. Tunggu Hingga Dingin</h3>
+                <h3>Penghargaan Ini Adalah Apresiasi untuk Semua Pihak</h3>
                 <p>
-                  Jangan pernah menuang minyak jelantah panas langsung ke wadah
-                  penyimpanan. Biarkan minyak mencapai suhu ruangan terlebih
-                  dahulu untuk menghindari risiko kebakaran dan kerusakan wadah
-                  plastik.
+                  Penghargaan ini tidak hanya menjadi milik EcoOil, tetapi juga
+                  untuk seluruh mitra, karyawan, dan masyarakat yang telah
+                  mendukung gerakan daur ulang minyak jelantah. Ini adalah bukti
+                  nyata bahwa kolaborasi adalah kunci utama dalam menciptakan
+                  perubahan yang signifikan untuk pelestarian bumi kita.
                 </p>
 
-                <h3>2. Saring Kotoran</h3>
+                <h3>Inovasi Teknologi Daur Ulang</h3>
                 <p>
-                  Gunakan saringan atau kain katun bersih untuk menyaring sisa
-                  makanan dan partikel padat dari minyak. Ini akan memperpanjang
-                  umur simpan minyak dan memudahkan proses daur ulang.
+                  Salah satu penilaian utama juri adalah inovasi teknologi
+                  pengolahan kami yang ramah lingkungan dan efisien. Proses
+                  transesterifikasi yang kami kembangkan mampu menghasilkan
+                  biodiesel berkualitas tinggi dengan emisi yang jauh lebih
+                  rendah dibandingkan proses konvensional. Teknologi ini telah
+                  terbukti aman dan tidak menghasilkan limbah berbahaya.
                 </p>
 
                 <img
-                  src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-                  alt="Proses Penyaringan"
+                  src="https://images.unsplash.com/photo-1532996122724-e3c354a0b15b?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                  alt="Tim EcoOil"
                   class="img-fluid rounded"
                   loading="lazy"
                 />
 
                 <!-- Infographic -->
                 <div class="infographic">
-                  <h4>Statistik Penyimpanan Minyak Jelantah</h4>
+                  <h4>Pencapaian EcoOil Hingga Saat Ini</h4>
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3 col-6">
                       <div class="stat-box">
-                        <div class="stat-number">30°C</div>
-                        <div class="stat-label">Suhu Penyimpanan Ideal</div>
+                        <div class="stat-number">5</div>
+                        <div class="stat-label">Tahun Konsistensi</div>
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3 col-6">
                       <div class="stat-box">
-                        <div class="stat-number">1 Bulan</div>
-                        <div class="stat-label">Maksimal Waktu Penyimpanan</div>
+                        <div class="stat-number">10J+</div>
+                        <div class="stat-label">Liter Minyak Didaur Ulang</div>
                       </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3 col-6">
                       <div class="stat-box">
-                        <div class="stat-number">90%</div>
-                        <div class="stat-label">Efektivitas Daur Ulang</div>
+                        <div class="stat-number">50+</div>
+                        <div class="stat-label">Mitra UMKM</div>
+                      </div>
+                    </div>
+                    <div class="col-md-3 col-6">
+                      <div class="stat-box">
+                        <div class="stat-number">30%</div>
+                        <div class="stat-label">Penurunan Emisi CO₂</div>
                       </div>
                     </div>
                   </div>
                 </div>
 
-                <h3>3. Pilih Wadah yang Tepat</h3>
+                <h3>Dampak Positif bagi Masyarakat</h3>
                 <p>
-                  Gunakan wadah kedap udara dari bahan kaca atau plastik food
-                  grade. Hindari wadah logam karena dapat bereaksi dengan
-                  minyak. Pastikan wadah bersih dan kering sebelum digunakan.
+                  Lebih dari sekadar penghargaan, ini adalah cerminan dari
+                  dampak positif yang kami ciptakan. Melalui program kemitraan,
+                  kami telah memberdayakan lebih dari 50 UMKM di berbagai kota,
+                  menciptakan lapangan kerja, dan membantu mereka meningkatkan
+                  pendapatan. Secara tidak langsung, kami juga turut serta
+                  menjaga kebersihan saluran air dan mengurangi risiko banjir
+                  yang disebabkan oleh pembuangan minyak sembarangan.
                 </p>
 
-                <h3>4. Simpan di Tempat yang Tepat</h3>
+                <h3>Komitmen Masa Depan</h3>
                 <p>
-                  Simpan minyak jelantah di tempat yang sejuk, kering, dan
-                  terhindar dari sinar matahari langsung. Jauhkan dari sumber
-                  panas dan api.
+                  Penghargaan ini bukanlah akhir dari perjalanan kami, melainkan
+                  tonggak sejarah yang akan memotivasi kami untuk terus
+                  berinovasi dan berkembang. EcoOil berkomitmen untuk terus
+                  memperluas jangkauan kami, meningkatkan kapasitas produksi,
+                  dan mencari terobosan baru dalam pengelolaan limbah
+                  berkelanjutan.
                 </p>
 
-                <h3>5. Beri Label dan Tanggal</h3>
-                <p>
-                  Beri label pada wadah dengan tanggal penyimpanan. Minyak
-                  jelantah sebaiknya tidak disimpan lebih dari 1 bulan sebelum
-                  didaur ulang.
-                </p>
-
-                <div class="alert alert-info mt-4">
-                  <i class="fas fa-lightbulb me-2"></i>
-                  <strong>Tips:</strong> Jangan mencampur minyak jelantah dari
-                  jenis yang berbeda (misalnya minyak sawit dengan minyak
-                  zaitun) karena dapat mempersulit proses daur ulang.
+                <div class="alert alert-success mt-4">
+                  <i class="fas fa-quote-left me-2"></i>
+                  <strong>Kata Direktur Utama:</strong> "Penghargaan ini adalah
+                  motivasi bagi kami untuk terus berinovasi dan memberikan yang
+                  terbaik untuk lingkungan. Kami percaya bahwa setiap tetes
+                  minyak jelantah memiliki nilai yang bisa kita manfaatkan
+                  bersama."
                 </div>
 
                 <!-- Share Buttons -->
@@ -938,21 +953,23 @@
               <div class="col-md-6 mb-4">
                 <div class="card article-card h-100">
                   <img
-                    src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                    src="https://images.unsplash.com/photo-1607619056574-7b4d1983444b?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
                     class="card-img-top article-img"
-                    alt="Manfaat Daur Ulang"
+                    alt="Manfaat Biodiesel"
                     loading="lazy"
                   />
                   <div class="card-body">
-                    <span class="badge bg-success mb-2">Lingkungan</span>
+                    <span class="badge bg-success mb-2">Penelitian</span>
                     <h5 class="card-title">
-                      Manfaat Daur Ulang Minyak Jelantah untuk Lingkungan
+                      Manfaat Biodiesel dari Minyak Jelantah
                     </h5>
                     <p class="card-text">
-                      Temukan bagaimana daur ulang minyak jelantah dapat
-                      mengurangi polusi dan mendukung ekonomi sirkular.
+                      Temukan manfaat luar biasa biodiesel yang dihasilkan dari
+                      minyak jelantah bagi lingkungan dan energi terbarukan.
                     </p>
-                    <a href="#" class="btn btn-outline-primary btn-sm"
+                    <a
+                      href="artikel2.html"
+                      class="btn btn-outline-primary btn-sm"
                       >Baca Selengkapnya</a
                     >
                   </div>
@@ -961,21 +978,23 @@
               <div class="col-md-6 mb-4">
                 <div class="card article-card h-100">
                   <img
-                    src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                    src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
                     class="card-img-top article-img"
-                    alt="Peluang Bisnis"
+                    alt="Tips Menyimpan"
                     loading="lazy"
                   />
                   <div class="card-body">
-                    <span class="badge bg-warning mb-2">Bisnis</span>
+                    <span class="badge bg-primary mb-2">Tips</span>
                     <h5 class="card-title">
-                      Peluang Bisnis dari Minyak Jelantah
+                      Cara Menyimpan Minyak Jelantah yang Benar
                     </h5>
                     <p class="card-text">
-                      Jelajahi peluang ekonomi yang dapat dihasilkan dari
-                      pengelolaan minyak jelantah yang tepat.
+                      Pelajari cara menyimpan minyak jelantah dengan aman
+                      sebelum didaur ulang untuk menjaga kualitasnya.
                     </p>
-                    <a href="#" class="btn btn-outline-primary btn-sm"
+                    <a
+                      href="artikel1.html"
+                      class="btn btn-outline-primary btn-sm"
                       >Baca Selengkapnya</a
                     >
                   </div>
@@ -1048,32 +1067,32 @@
               <h4 class="widget-title">Artikel Populer</h4>
               <div class="popular-article">
                 <img
-                  src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
+                  src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
                   alt="Artikel Populer 1"
                 />
                 <div>
-                  <h6>Cara Menyimpan Minyak Jelantah yang Benar</h6>
-                  <small class="text-muted">15 Mar 2024</small>
+                  <h6>EcoOil Raih Penghargaan Lingkungan</h6>
+                  <small class="text-muted">20 Mar 2024</small>
                 </div>
               </div>
               <div class="popular-article">
                 <img
-                  src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
+                  src="https://images.unsplash.com/photo-1607619056574-7b4d1983444b?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
                   alt="Artikel Populer 2"
                 />
                 <div>
-                  <h6>Manfaat Daur Ulang untuk Lingkungan</h6>
+                  <h6>Manfaat Biodiesel dari Minyak Jelantah</h6>
                   <small class="text-muted">10 Mar 2024</small>
                 </div>
               </div>
               <div class="popular-article">
                 <img
-                  src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
+                  src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=100&q=80"
                   alt="Artikel Populer 3"
                 />
                 <div>
-                  <h6>Peluang Bisnis Minyak Jelantah</h6>
-                  <small class="text-muted">5 Mar 2024</small>
+                  <h6>Cara Menyimpan Minyak Jelantah</h6>
+                  <small class="text-muted">15 Mar 2024</small>
                 </div>
               </div>
             </div>
@@ -1082,14 +1101,14 @@
             <div class="sidebar-widget fade-in">
               <h4 class="widget-title">Tags</h4>
               <div>
-                <a href="#" class="tag">#daurulang</a>
-                <a href="#" class="tag">#minyakjelantah</a>
+                <a href="#" class="tag">#penghargaan</a>
+                <a href="#" class="tag">#prestasi</a>
                 <a href="#" class="tag">#lingkungan</a>
-                <a href="#" class="tag">#biodiesel</a>
-                <a href="#" class="tag">#ekonomisirkular</a>
-                <a href="#" class="tag">#ramahlingkungan</a>
-                <a href="#" class="tag">#tips</a>
-                <a href="#" class="tag">#bisnishijau</a>
+                <a href="#" class="tag">#minyakjelantah</a>
+                <a href="#" class="tag">#ekofriendly</a>
+                <a href="#" class="tag">#ecoil</a>
+                <a href="#" class="tag">#berita</a>
+                <a href="#" class="tag">#award</a>
               </div>
             </div>
           </div>
@@ -1259,4 +1278,3 @@
     </script>
   </body>
 </html>
-  
