--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       /* Hero Section with Fixed Parallax */
       .hero {
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-          url("https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
+          url("img/BodyMinyak.jpg");
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
@@ -1877,7 +1877,7 @@
           <div class="col-lg-6 fade-in-right">
             <div class="img-zoom">
               <img
-                src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                src="img/proses.jpg"
                 alt="Proses daur ulang minyak jelantah"
                 class="img-fluid rounded shadow"
                 loading="lazy"
@@ -2295,7 +2295,7 @@
             <div class="card blog-card h-100 fade-in-up delay-1 hover-lift">
               <div class="img-zoom">
                 <img
-                  src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                  src="img/menyimpan.jpeg"
                   class="card-img-top"
                   alt="Blog 1"
                   style="height: 200px; object-fit: cover"
@@ -2343,7 +2343,7 @@
                     <i class="fas fa-envelope"></i>
                   </a>
                 </div>
-                <a href="artikel1.html" class="btn btn-outline-primary btn-sm"
+                <a href="artikel.html" class="btn btn-outline-primary btn-sm"
                   >Baca Selengkapnya</a
                 >
               </div>
@@ -2353,7 +2353,7 @@
             <div class="card blog-card h-100 fade-in-up delay-2 hover-lift">
               <div class="img-zoom">
                 <img
-                  src="https://images.unsplash.com/photo-1607619056574-7b4d1983444b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                  src="img/manfaat.jpg"
                   class="card-img-top"
                   alt="Blog 2"
                   style="height: 200px; object-fit: cover"
@@ -2411,7 +2411,7 @@
             <div class="card blog-card h-100 fade-in-up delay-3 hover-lift">
               <div class="img-zoom">
                 <img
-                  src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                  src="img/penghargaan.jpg"
                   class="card-img-top"
                   alt="Blog 3"
                   style="height: 200px; object-fit: cover"
@@ -2489,7 +2489,7 @@
             <div class="card gallery-card h-100 fade-in-up delay-1 hover-lift">
               <div class="img-zoom img-lightbox">
                 <img
-                  src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                  src="img/pengumpulan.jpg"
                   class="card-img-top"
                   alt="Pengumpulan minyak jelantah"
                   style="height: 250px; object-fit: cover"
@@ -2510,7 +2510,7 @@
             <div class="card gallery-card h-100 fade-in-up delay-2 hover-lift">
               <div class="img-zoom img-lightbox">
                 <img
-                  src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                  src="img/penyaringan.png"
                   class="card-img-top"
                   alt="Proses penyaringan"
                   style="height: 250px; object-fit: cover"
@@ -2531,7 +2531,7 @@
             <div class="card gallery-card h-100 fade-in-up delay-3 hover-lift">
               <div class="img-zoom img-lightbox">
                 <img
-                  src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                  src="img/biodiesel.png"
                   class="card-img-top"
                   alt="Produksi biodiesel"
                   style="height: 250px; object-fit: cover"
@@ -2552,7 +2552,7 @@
             <div class="card gallery-card h-100 fade-in-up delay-4 hover-lift">
               <div class="img-zoom img-lightbox">
                 <img
-                  src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                  src="img/sabun.jpg"
                   class="card-img-top"
                   alt="Produk sabun"
                   style="height: 250px; object-fit: cover"
@@ -2572,7 +2572,7 @@
             <div class="card gallery-card h-100 fade-in-up delay-5 hover-lift">
               <div class="img-zoom img-lightbox">
                 <img
-                  src="https://images.unsplash.com/photo-1562077981-4d7eafd88c7b?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80"
+                  src="img/edukasi.jpg"
                   class="card-img-top"
                   alt="Edukasi masyarakat"
                   style="height: 250px; object-fit: cover"
