--- a/artikel.html
+++ b/artikel.html
@@ -1055,7 +1055,7 @@
               </div>
 
               <img
-                src="https://images.unsplash.com/photo-1542601906990-b4d3fb778b09?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80"
+                src="img/menyimpan.jpeg"
                 alt="Minyak Jelantah"
                 class="img-fluid rounded mb-4"
                 loading="lazy"
@@ -1085,7 +1085,7 @@
                 </p>
 
                 <img
-                  src="https://images.unsplash.com/photo-1589923188651-268a9765e432?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                  src="img/penyaringan.png"
                   alt="Proses Penyaringan"
                   class="img-fluid rounded"
                   loading="lazy"
