--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             <div class="team-card fade-in-up delay-1">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/Rendi.jpg"
                   class="team-img"
                   alt="Ahmad Wijaya"
                   loading="lazy"
@@ -417,7 +417,7 @@
             <div class="team-card fade-in-up delay-2">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/wahid.jpg"
                   class="team-img"
                   alt="Sari Dewi"
                   loading="lazy"
@@ -445,7 +445,7 @@
             <div class="team-card fade-in-up delay-3">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/Ustad.jpg"
                   class="team-img"
                   alt="Rina Kartika"
                   loading="lazy"
@@ -473,7 +473,7 @@
             <div class="team-card fade-in-up delay-4">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+                  src="Foto/Yogi.jpg"
                   class="team-img"
                   alt="Budi Santoso"
                   loading="lazy"
@@ -501,7 +501,7 @@
             <div class="team-card fade-in-up delay-5">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/Abda.jpg"
                   class="team-img"
                   alt="Dian Pratama"
                   loading="lazy"
@@ -509,7 +509,7 @@
                 />
               </div>
               <div class="team-info">
-                <h3 class="team-name">Mohammad Abda Alif</h3>
+                <h3 class="team-name">Moh. Abda Alif</h3>
                 <p class="team-position">202343500916</p>
                 <div class="team-social">
                   <a href="#" aria-label="LinkedIn"
@@ -557,7 +557,7 @@
             <div class="team-card fade-in-up delay-2">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/Rasy.jpg"
                   class="team-img"
                   alt="Fajar Nugroho"
                   loading="lazy"
@@ -585,7 +585,7 @@
             <div class="team-card fade-in-up delay-3">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1544725173-8e7e53415bb0?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/Ridwan.jpg"
                   class="team-img"
                   alt="Hendra Setiawan"
                   loading="lazy"
@@ -943,66 +943,126 @@
       </div>
     </section>
 
-    <!-- Video Section - Simplified -->
-    <section class="section-padding bg-light-green" id="video" itemprop="video">
-      <div class="container">
-        <div class="section-title text-center fade-in-up">
-          <h2>Video Edukasi</h2>
-          <p>
-            Pelajari lebih lanjut tentang pentingnya daur ulang minyak jelantah
-            melalui video berikut
-          </p>
-        </div>
-        <div class="row g-4 justify-content-center">
-          <div class="col-lg-6">
-            <div class="card video-card h-100 fade-in-up delay-1 hover-lift">
-              <div class="card-body p-0">
-                <div class="ratio ratio-16x9">
-                  <iframe
-                    src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                    title="Video Edukasi Minyak Jelantah"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                    loading="lazy"
-                  ></iframe>
-                </div>
-                <div class="p-4">
-                  <h5 class="card-title">Proses Daur Ulang Minyak Jelantah</h5>
-                  <p class="card-text">
-                    Video lengkap tentang bagaimana minyak jelantah diolah
-                    menjadi produk bernilai tinggi.
-                  </p>
-                </div>
+<!-- Video Section - Simplified -->
+<section class="section-padding bg-light-green" id="video" itemprop="video">
+  <div class="container">
+    <div class="section-title text-center fade-in-up">
+      <h2>Video Edukasi</h2>
+      <p>
+        Pelajari lebih lanjut tentang pentingnya daur ulang minyak jelantah
+        melalui video berikut
+      </p>
+    </div>
+    <div class="row g-4 justify-content-center">
+      <div class="col-lg-6 col-md-10">
+        <div class="video-thumbnail fade-in-up delay-1 hover-lift" 
+             data-bs-toggle="modal" 
+             data-bs-target="#videoModal1"
+             style="cursor: pointer;">
+          <div class="position-relative">
+            <img
+              src="img/1.png"
+              class="img-fluid rounded shadow video-thumb-img"
+              alt="Sisa Minyak Jelantah Bisa Di Buat Bahan Bakar"
+              loading="lazy"
+              itemprop="image"
+            />
+            <div class="video-overlay">
+              <div class="play-button">
+                <i class="fas fa-play-circle"></i>
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="card video-card h-100 fade-in-up delay-2 hover-lift">
-              <div class="card-body p-0">
-                <div class="ratio ratio-16x9">
-                  <iframe
-                    src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                    title="Manfaat Daur Ulang Minyak Jelantah"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                    loading="lazy"
-                  ></iframe>
-                </div>
-                <div class="p-4">
-                  <h5 class="card-title">Manfaat untuk Lingkungan</h5>
-                  <p class="card-text">
-                    Dampak positif daur ulang minyak jelantah terhadap
-                    kelestarian lingkungan.
-                  </p>
-                </div>
-              </div>
-            </div>
+          <div class="mt-3">
+            <h5 class="card-title">Sisa Minyak Jelantah Bisa Di Buat Bahan Bakar</h5>
+            <p class="card-text">
+              Video lengkap tentang bagaimana minyak jelantah diolah
+              menjadi produk bernilai tinggi.
+            </p>
           </div>
         </div>
       </div>
-    </section>
+      <div class="col-lg-6 col-md-10">
+        <div class="video-thumbnail fade-in-up delay-2 hover-lift" 
+             data-bs-toggle="modal" 
+             data-bs-target="#videoModal2"
+             style="cursor: pointer;">
+          <div class="position-relative">
+            <img
+              src="img/2.png"
+              class="img-fluid rounded shadow video-thumb-img"
+              alt="Bahaya Minyak Jelantah"
+              loading="lazy"
+              itemprop="image"
+            />
+            <div class="video-overlay">
+              <div class="play-button">
+                <i class="fas fa-play-circle"></i>
+              </div>
+            </div>
+          </div>
+          <div class="mt-3">
+            <h5 class="card-title">Bahaya Minyak Jelantah</h5>
+            <p class="card-text">
+              Dampak positif daur ulang minyak jelantah terhadap
+              kelestarian lingkungan.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Video Modal 1 -->
+<div class="modal fade" id="videoModal1" tabindex="-1" aria-labelledby="videoModal1Label" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-dark">
+      <div class="modal-header border-0">
+        <h5 class="modal-title text-white" id="videoModal1Label">Sisa Minyak Jelantah Bisa Di Buat Bahan Bakar</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-0">
+        <div class="ratio ratio-16x9">
+          <video id="videoPlayer1" width="100%" controls preload="metadata">
+            <source src="mp4/Sisa%20Minyak%20Jelantah%20Bisa%20Dibuat%20Jadi%20Bahan%20Bakar,%20Lho!%20%23IndonesiaKayaBBN.mp4" type="video/mp4">
+            Browser Anda tidak mendukung tag video.
+          </video>
+        </div>
+      </div>
+      <div class="modal-footer bg-dark border-0">
+        <div class="video-info text-white">
+          <p class="mb-0">Pelajari bagaimana minyak jelantah dapat diubah menjadi bahan bakar alternatif yang ramah lingkungan.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Video Modal 2 -->
+<div class="modal fade" id="videoModal2" tabindex="-1" aria-labelledby="videoModal2Label" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content bg-dark">
+      <div class="modal-header border-0">
+        <h5 class="modal-title text-white" id="videoModal2Label">Bahaya Minyak Jelantah</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body p-0">
+        <div class="ratio ratio-16x9">
+          <video id="videoPlayer2" width="100%" controls preload="metadata">
+            <source src="mp4/Bahaya Minyak Jelantah.mp4" type="video/mp4">
+            Browser Anda tidak mendukung tag video.
+          </video>
+        </div>
+      </div>
+      <div class="modal-footer bg-dark border-0">
+        <div class="video-info text-white">
+          <p class="mb-0">Ketahui dampak negatif pembuangan minyak jelantah yang tidak tepat dan pentingnya daur ulang.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
     <!-- Contact Section -->
     <section
