--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             <div class="team-card fade-in-up delay-1">
               <div class="team-img-container">
                 <img
-                  src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+                  src="Foto/Diffa.jpg"
                   class="team-img"
                   alt="Rizki Ananda"
                   loading="lazy"
