--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           itemprop="url"
         >
           <img
-            src="Gemini_Generated_Image_p63358p63358p633-removebg-preview.png"
+            src="img/Logo.png"
             alt="EcoOil Logo"
             class="navbar-logo me-2"
             itemprop="logo"
