--- a/artikel2.html
+++ b/artikel2.html
@@ -958,11 +958,7 @@
     >
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
-          <img
-            src="Gemini_Generated_Image_p63358p63358p633-removebg-preview.png"
-            alt="EcoOil Logo"
-            class="navbar-logo me-2"
-          />
+          <img src="img/Logo.png" alt="EcoOil Logo" class="navbar-logo me-2" />
           <span>Eco Jelantah</span>
         </a>
         <button
